--- a/main.css
+++ b/main.css
@@ -296,6 +296,7 @@ footer .copyright {
   position: fixed;
   bottom: 40px;
   right: 30px;
+  z-index: 10;
 }
 
 .fixed .showIcon {
